[package]
name = "adloom-x-ultra"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.17", default-features = false }
linera-sdk = "0.15.6"
futures = { version = "0.3 "}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]
linera-sdk = { version = "0.15.6", features = ["test", "wasmer"] }
tokio = { version = "1.40", features = ["rt", "sync"] }

[[bin]]
name = "adloom_x_ultra_contract"
path = "src/contract.rs"

[[bin]]
name = "adloom_x_ultra_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
